test/fail/entitynamehygiene-2.app
//is not allowed
application test

  entity Int {
    property :: String
  }
